--- a/Home.html
+++ b/Home.html
@@ -1,43 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mblayang-Travel-Blog-Agency-Website</title>
-    <link rel="stylesheet" href="Home.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300&family=Open+Sans:wght@500&family=Pixelify+Sans:wght@400;500&family=Poppins:wght@300;400&family=Roboto:ital,wght@0,300;0,400;1,300&family=Rubik&family=Rubik+Pixels&display=swap" rel="stylesheet">
-</head>
-<body>
+    <link rel="stylesheet" href="Home.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300&family=Open+Sans:wght@500&family=Pixelify+Sans:wght@400;500&family=Poppins:wght@300;400&family=Roboto:ital,wght@0,300;0,400;1,300&family=Rubik&family=Rubik+Pixels&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!-- Surbhi -->
     <nav>
-       <div id="navLinksContainer">
-        <a href="#" id="logo"><img src="logoImg.jpg" alt="Logo" width="80%" height="90%"></a>
+      <div id="navLinksContainer">
+        <a href="#" id="logo"
+          ><img src="logoImg.jpg" alt="Logo" width="80%" height="90%"
+        /></a>
         <a href="#">Find Talent</a>
         <a href="#">Insipiration</a>
         <div class="dropdown">
-            <button class="dropbtn">Learn design<span class="material-symbols-outlined">keyboard_arrow_down</span></button>
-            <div class="dropdown-content">
-                <a href="#">
-                    <p>UX Diploma</p>
-                    <p>In partnership with UX Design Interview</p>
-                </a>
-                <a href="#">
-                    <p>Live interactive workshop</p>
-                    <p>with design professions</p>
-                </a>
-            </div>
+          <button class="dropbtn">
+            Learn design<span class="material-symbols-outlined"
+              >keyboard_arrow_down</span
+            >
+          </button>
+          <div class="dropdown-content">
+            <a href="#">
+              <p>UX Diploma</p>
+              <p>In partnership with UX Design Interview</p>
+            </a>
+            <a href="#">
+              <p>Live interactive workshop</p>
+              <p>with design professions</p>
+            </a>
+          </div>
         </div>
         <a href="#">Jobs</a>
         <a href="#">Go Pro</a>
-       </div>
+      </div>
 
-       <div id="navBtnContainer">
-        <input type="text" name="searchBar" id="searchBar" placeholder="Search...">
+      <div id="navBtnContainer">
+        <input
+          type="text"
+          name="searchBar"
+          id="searchBar"
+          placeholder="Search..."
+        />
         <button id="loginBtn">Log in</button>
         <button id="signBtn">Sign up</button>
-       </div>
+      </div>
     </nav>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
