added logos in cart and change logo

--- a/Home.html
+++ b/Home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mblayang-Travel-Blog-Agency-Website</title>
+    <title>Travel Tribe</title>
     <link rel="stylesheet" href="Home.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,20 +34,20 @@
       <h1>Travel around the world</h1>
       <h3>Enjoy our services for your trip anywhere and anytime</h3>
       <div id="inputCont">
-        <div>
+        <div class="Sh-labelCont">
           <label for="placeNameInp" class="labels">Location</label>
           <input type="text" name="placeName" id="placeNameInp" placeholder="Where to go">
         </div>
-        <div>
+        <div class="Sh-labelCont">
           <label for="checkInDate" class="labels">Check in</label>
           <input type="date" name="checkInDate" id="checkInDate" placeholder="Choose a date">
         </div>
-        <div>
+        <div class="Sh-labelCont">
           <label for="visitor" class="labels">Visitor</label>
           <input type="text" name="placeName" id="visitor" placeholder="Add guest">
         </div>
-        <div>
-          <button><span  class="material-symbols-outlined">search</span></button>
+        <div class="Sh-btnCont">
+          <button id="Sh-searchBtn"><span style="font-size: 70px;" class="material-symbols-outlined">search</span></button>
         </div>
       </div>
     </section>
@@ -55,36 +55,36 @@
     <section class="alignContainer">
       <div>
         <div>
-          <div class="packageLogoCont"><img src="" alt="logo"></div>
-          <div class="packageNames">Kona Package</div>
+          <div class="packageLogoCont"><img src="kona-logo.webp" alt="logo"></div>
+          <div class="packageNames"><a href="">Kona Package</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="" alt="logo"></div>
-          <div class="packageNames">Historical Destination</div>
+          <div class="packageLogoCont"><img src="historical-log.webp" alt="logo"></div>
+          <div class="packageNames"><a href="">Historical Destination</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="" alt="logo"></div>
-          <div class="packageNames">Camping Package</div>
+          <div class="packageLogoCont"><img src="camping-logo.webp" alt="logo"></div>
+          <div class="packageNames"><a href="">Camping Package</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="" alt="logo"></div>
-          <div class="packageNames">Asia Destination</div>
+          <div class="packageLogoCont"><img src="asia-logo.webp" alt="logo"></div>
+          <div class="packageNames"><a href="">Asia Destination</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="" alt="logo"></div>
-          <div class="packageNames">Desert Oasis Package</div>
+          <div class="packageLogoCont"><img src="desert-logo.webp" alt="logo"></div>
+          <div class="packageNames"><a href="">Desert Oasis Package</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="" alt="logo"></div>
-          <div class="packageNames">Hiking Package</div>
+          <div class="packageLogoCont"><img src="hiking-logo.jpg" alt="logo"></div>
+          <div class="packageNames"><a href="">Hiking Package</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="" alt="">logo</div>
-          <div class="packageNames">Europa Destination</div>
+          <div class="packageLogoCont"><img src="Europe-logo.jpg" alt="logo"></div>
+          <div class="packageNames"><a href="">Europa Destination</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="" alt="">logo</div>
-          <div class="packageNames">Beach Package</div>
+          <div class="packageLogoCont"><img src="beach-logo.webp" alt="logo"></div>
+          <div class="packageNames"><a href="">Beach Package</a></div>
         </div>
       </div>
     </section>
@@ -114,15 +114,15 @@
           </div>
           <div>
             <div><img src="" alt="logo"></div>
-            <h5>BEBEGIAN</h5>
+            <h5>LELUNGO</h5>
           </div>
           <div>
             <div><img src="" alt="logo"></div>
-            <h5>BEBEGIAN</h5>
+            <h5>PIPIKNIK</h5>
           </div>
           <div>
             <div><img src="" alt="logo"></div>
-            <h5>BEBEGIAN</h5>
+            <h5>TITINDAK</h5>
           </div>
         </div>
 
