homePage HTML and CSS done

--- a/Home.html
+++ b/Home.html
@@ -13,37 +13,37 @@
   <body>
     <!-- Surbhi -->
     <header>
-      <div id="fadeCont"></div>
+      <div id="Sh-fadeCont"></div>
     </header>
-    <div id="alignCont">
+    <div id="Sh-alignCont">
       <nav>
-        <div id="logoCont"><a href="./Home.html"><img src="Website-Logo (1).jpeg" alt="Logo" ></a></div>
-        <div id="pageLinksCont">
+        <div id="Sh-logoCont"><a href="./Home.html"><img src="Website-Logo (1).jpeg" alt="Logo" ></a></div>
+        <div id="Sh-pageLinksCont">
           <a href="./Home.html">HOME</a>
           <a href="#">ABOUT US</a>
           <a href="#">CONTACT US</a>
           <a href="#">BLOG</a>
         </div>
-        <div id="navBtnCont">
-          <button id="logInBtn">Log in</button>
-          <button id="signInBtn">Sign up</button>
+        <div id="Sh-navBtnCont">
+          <button id="Sh-logInBtn">Log in</button>
+          <button id="Sh-signInBtn">Sign up</button>
         </div>
       </nav>
     </div>
-    <section id="headingInpContainer">
+    <section id="Sh-headingInpContainer">
       <h1>Travel around the world</h1>
       <h3>Enjoy our services for your trip anywhere and anytime</h3>
-      <div id="inputCont">
+      <div id="Sh-inputCont">
         <div class="Sh-labelCont">
-          <label for="placeNameInp" class="labels">Location</label>
+          <label for="placeNameInp" class="Sh-labels">Location</label>
           <input type="text" name="placeName" id="placeNameInp" placeholder="Where to go">
         </div>
         <div class="Sh-labelCont">
-          <label for="checkInDate" class="labels">Check in</label>
+          <label for="checkInDate" class="Sh-labels">Check in</label>
           <input type="date" name="checkInDate" id="checkInDate" placeholder="Choose a date">
         </div>
         <div class="Sh-labelCont">
-          <label for="visitor" class="labels">Visitor</label>
+          <label for="visitor" class="Sh-labels">Visitor</label>
           <input type="text" name="placeName" id="visitor" placeholder="Add guest">
         </div>
         <div class="Sh-btnCont">
@@ -52,88 +52,88 @@
       </div>
     </section>
 
-    <section class="alignContainer">
+    <section class="Sh-alignContainer">
       <div>
         <div>
-          <div class="packageLogoCont"><img src="kona-logo.webp" alt="logo"></div>
-          <div class="packageNames"><a href="">Kona Package</a></div>
+          <div class="Sh-packageLogoCont"><img src="kona-logo.webp" alt="logo"></div>
+          <div class="Sh-packageNames"><a href="">Kona Package</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="historical-log.webp" alt="logo"></div>
-          <div class="packageNames"><a href="">Historical Destination</a></div>
+          <div class="Sh-packageLogoCont"><img src="historical-log.webp" alt="logo"></div>
+          <div class="Sh-packageNames"><a href="">Historical Destination</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="camping-logo.webp" alt="logo"></div>
-          <div class="packageNames"><a href="">Camping Package</a></div>
+          <div class="Sh-packageLogoCont"><img src="camping-logo.webp" alt="logo"></div>
+          <div class="Sh-packageNames"><a href="">Camping Package</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="asia-logo.webp" alt="logo"></div>
-          <div class="packageNames"><a href="">Asia Destination</a></div>
+          <div class="Sh-packageLogoCont"><img src="asia-logo.webp" alt="logo"></div>
+          <div class="Sh-packageNames"><a href="">Asia Destination</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="desert-logo.webp" alt="logo"></div>
-          <div class="packageNames"><a href="">Desert Oasis Package</a></div>
+          <div class="Sh-packageLogoCont"><img src="desert-logo.webp" alt="logo"></div>
+          <div class="Sh-packageNames"><a href="">Desert Oasis Package</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="hiking-logo.jpg" alt="logo"></div>
-          <div class="packageNames"><a href="">Hiking Package</a></div>
+          <div class="Sh-packageLogoCont"><img src="hiking-logo.jpg" alt="logo"></div>
+          <div class="Sh-packageNames"><a href="">Hiking Package</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="Europe-logo.jpg" alt="logo"></div>
-          <div class="packageNames"><a href="">Europa Destination</a></div>
+          <div class="Sh-packageLogoCont"><img src="Europe-logo.jpg" alt="logo"></div>
+          <div class="Sh-packageNames"><a href="">Europa Destination</a></div>
         </div>
         <div>
-          <div class="packageLogoCont"><img src="beach-logo.webp" alt="logo"></div>
-          <div class="packageNames"><a href="">Beach Package</a></div>
+          <div class="Sh-packageLogoCont"><img src="beach-logo.webp" alt="logo"></div>
+          <div class="Sh-packageNames"><a href="">Beach Package</a></div>
         </div>
       </div>
     </section>
 
-    <div id="blankCont"></div>
+    <div id="Sh-blankCont"></div>
 
-    <div class="alignCont3">
-      <section id="transparentCont">
+    <div class="Sh-commonAlignCont">
+      <section class="Sh-transparentCont">
         <h1>TRAVEL PARTNER</h1>
       </section>
     </div>
-    <div id="alignCont4">
-      <section id="overlapCont">
+    <div class="Sh-commoneAlignforOverlapCont">
+      <section class="Sh-overlapCont" id="Sh-overlap1stCont">
         <h2>OUR TRAVEL PARTNER</h2>
       </section>
     </div>
     
-    <div class="alignCont5">
-      <section id="partnerSection">
+    <div class="Sh-alignCont5">
+      <section id="Sh-partnerSection">
         <article>
           <p>We collaborate with several other travel service provide to increase your comfort when using our services</p>
         </article>
         <div>
           <div>
-            <div><img src="" alt="logo"></div>
+            <div><img src="partnerCompanyLogo1.jpg" width="50px" alt="logo"></div>
             <h5>BEBEGIAN</h5>
           </div>
           <div>
-            <div><img src="" alt="logo"></div>
+            <div><img src="partnerCompanyLogo2.jpg" width="50px" alt="logo"></div>
             <h5>LELUNGO</h5>
           </div>
           <div>
-            <div><img src="" alt="logo"></div>
+            <div><img src="partnerCompanyLogo3.jpg" width="50px" alt="logo"></div>
             <h5>PIPIKNIK</h5>
           </div>
           <div>
-            <div><img src="" alt="logo"></div>
+            <div><img src="partnerCompanyLogo4.jpg" width="50px" style="border-radius: 50%;" alt="logo"></div>
             <h5>TITINDAK</h5>
           </div>
         </div>
       </section>
     </div>
 
-    <div id="alignCont6">
-      <section id="aboutSection">
+    <div id="Sh-alignCont6">
+      <section id="Sh-aboutSection">
         <div>
           <h3>ABOUT US</h3>
           <h4>Travel Tribe</h4>
-          <p>Travel Tribe is a travel agency located in Bengaluru, India. The reason we created this travel agency is...</p>
+          <p>Travel Tribe is a travel agency located in Karnataka, India. The reason we created this travel agency is...</p>
           <button>See more</button>
         </div>
         <div>
@@ -143,7 +143,7 @@
     </div>
 <!-- -------------------Our Service Section------------------- -->
 
-<div id="alignCont7">
+<div id="Sh-alignCont7">
   <section>
     <div id="Sh-gridCont">
       <div>
@@ -171,10 +171,78 @@
     </div>
   </section>
 </div>
+
+<!-- ------------------PRICING HEADING------------------------------------ -->
   
+<div class="Sh-commonAlignCont">
+  <section class="Sh-transparentCont">
+    <h1>TRAVEL PACKAGES</h1>
+  </section>
+</div>
+<div class="Sh-commoneAlignforOverlapCont">
+  <section class="Sh-overlapCont" id="Sh-overlap2ndCont">
+    <h2>TRAVEL PRICING</h2>
+  </section>
+</div>
+
+<!-- --------------------------PRICING PARA---------------------------------- -->
+<div style="width: 100%; height: 30vh; display: flex; justify-content: center;">
+  <div style="width: 80%; height: 100%; text-align: center; padding: 0 10%; box-sizing: border-box;">
+    <p style="font-size: 200%; color: rgb(109, 95, 95); font-family: Poppins;">We provide several choices of travel packages that we have talored for you equipped with the best in class comfort</p>
+  </div>
+</div>
+<!-- ///////////////////Data Wrapper Container/////////////////// -->
+<div id="Sh-alignCont9">
+  <div id="Sh-data-main-container1">
+
+  </div>
+</div>
+<!-- ------------------------Overview of Blog page Container------------------------------------------------- -->
+
+<div class="Sh-commonAlignCont">
+  <section class="Sh-transparentCont">
+    <h1>BLOG TRAVEL TRIBE</h1>
+  </section>
+</div>
+<div class="Sh-commoneAlignforOverlapCont">
+  <section class="Sh-overlapCont" id="Sh-overlap3ndCont">
+    <h2>TRAVEL TRIBE</h2>
+  </section>
+</div>
+
+<div style="width: 100%; height: 30vh; display: flex; justify-content: center;">
+  <div style="width: 80%; height: 100%; text-align: center; padding: 0 10%; box-sizing: border-box;">
+    <p style="font-size: 200%; color: rgb(109, 95, 95); font-family: Poppins;">Travel Tribe resource article for travelers. Tips and tricks for travelers who want to make their own journey</p>
+  </div>
+</div>
+
+<!-- ///////////////////Data Wrapper Container/////////////////// -->
+<div id="Sh-alignCont11">
+  <div id="Sh-data-main-container2">
+
+  </div>
+</div>
+
+<!-- --------------------------------------------------------------- -->
+
+<div id="Sh-alignCont12">
+  <div id="Sh-testimonialCont">
+    <div>
+      <img src="testimonial-img.webp" alt="">
+    </div>
+    <div>
+      <h3>TESTIMONIALS</h3>
+      <div id="Sh-profileNameCont">
+        <img src="testimonial-person-profile-icon.webp" alt="profileLogo" width="30px">
+        <h5>Rohit Devnath</h5>
+      </div>
+      <p style="text-align:right;">Travel Tribe is everyone's dream travel agency, affordable prizes and customizable travel options are it's main advantages. You should try to travel with Travel Tribe</p>
+    </div>
+  </div>
+</div>
+
 <!-- -------------footer part--------------------- -->
     <div id="Nmain-Container-about">
-      <div id="Nmidbody-conatiner"></div>
       <!-- Footer -->
       <div class="Nabout-Footer">
         <div class="Ncontent-Footer">
