fix some Css in Cards

--- a/Home.html
+++ b/Home.html
@@ -139,7 +139,7 @@
       <div>
         <h3>ABOUT US</h3>
         <h4>Travel Tribe</h4>
-        <button id="addfetch">See More</button>
+        <!-- <button id="addfetch">See More</button> -->
         <p>Travel Tribe is a travel agency located in Karnataka, India. The reason we created this travel agency is...
         </p>
         <button>See more</button>
@@ -196,7 +196,7 @@
   <!-- --------------------------PRICING PARA---------------------------------- -->
   <div style="width: 100%; height: 30vh; display: flex; justify-content: center;">
     <div style="width: 80%; height: 100%; text-align: center; padding: 0 10%; box-sizing: border-box;">
-      <p style="font-size: 200%; color: rgb(109, 95, 95); font-family: Poppins;">We provide several choices of travel
+      <p style="font-size: 150%; color: rgb(109, 95, 95); font-family: Poppins;">We provide several choices of travel
         packages that we have talored for you equipped with the best in class comfort</p>
     </div>
   </div>
@@ -209,34 +209,7 @@
       <div id="btnContainer"><button id="seeMoreCardBtn">See More</button></div>
     </div>
   </div>
-  <!-- ------------------------Overview of Blog page Container------------------------------------------------- -->
-
-  <!-- <div class="Sh-commonAlignCont">
-    <section class="Sh-transparentCont">
-      <h1>BLOG TRAVEL TRIBE</h1>
-    </section>
-  </div>
-  <div class="Sh-commoneAlignforOverlapCont">
-    <section class="Sh-overlapCont" id="Sh-overlap3ndCont">
-      <h2>TRAVEL TRIBE</h2>
-    </section>
-  </div>
-
-  <div style="width: 100%; height: 30vh; display: flex; justify-content: center;">
-    <div style="width: 80%; height: 100%; text-align: center; padding: 0 10%; box-sizing: border-box;">
-      <p style="font-size: 200%; color: rgb(109, 95, 95); font-family: Poppins;">Travel Tribe resource article for
-        travelers. Tips and tricks for travelers who want to make their own journey</p>
-    </div>
-  </div>
- ///////////////////Data Wrapper Container/////////////////// -->
-  <!-- <div id="Sh-alignCont11">
-    <div id="Sh-data-main-container2">
-
-    </div>
-  </div> -->
-
-  <!-- --------------------------------------------------------------- -->
-
+  
   <div id="Sh-alignCont12">
     <div id="Sh-testimonialCont">
       <div>
