add hover effect in card btn

--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,7 @@
       <div id="Sh-logoCont"><a href="./Home.html"><img src="Website-Logo (1).jpeg" alt="Logo"></a></div>
       <div id="Sh-pageLinksCont">
         <a href="./Home.html">HOME</a>
-        <a href="#">ABOUT US</a>
+        <a href="./About.html">ABOUT US</a>
         <a href="#">CONTACT US</a>
         <a href="#">BLOG</a>
       </div>
