file system change

--- a/Home.html
+++ b/Home.html
@@ -61,35 +61,35 @@
   <section class="Sh-alignContainer">
     <div>
       <div>
-        <div class="Sh-packageLogoCont"><img src="kona-logo.webp" alt="logo"></div>
+        <div class="Sh-packageLogoCont"><img src="./home-images/kona-logo.webp" alt="logo"></div>
         <div class="Sh-packageNames"><a href="">Kona Package</a></div>
       </div>
       <div>
-        <div class="Sh-packageLogoCont"><img src="historical-log.webp" alt="logo"></div>
+        <div class="Sh-packageLogoCont"><img src="./home-images/historical-log.webp" alt="logo"></div>
         <div class="Sh-packageNames"><a href="">Historical Destination</a></div>
       </div>
       <div>
-        <div class="Sh-packageLogoCont"><img src="camping-logo.webp" alt="logo"></div>
+        <div class="Sh-packageLogoCont"><img src="./home-images/camping-logo.webp" alt="logo"></div>
         <div class="Sh-packageNames"><a href="">Camping Package</a></div>
       </div>
       <div>
-        <div class="Sh-packageLogoCont"><img src="asia-logo.webp" alt="logo"></div>
+        <div class="Sh-packageLogoCont"><img src="./home-images/asia-logo.webp" alt="logo"></div>
         <div class="Sh-packageNames"><a href="">Asia Destination</a></div>
       </div>
       <div>
-        <div class="Sh-packageLogoCont"><img src="desert-logo.webp" alt="logo"></div>
+        <div class="Sh-packageLogoCont"><img src="./home-images/desert-logo.webp" alt="logo"></div>
         <div class="Sh-packageNames"><a href="">Desert Oasis Package</a></div>
       </div>
       <div>
-        <div class="Sh-packageLogoCont"><img src="hiking-logo.jpg" alt="logo"></div>
+        <div class="Sh-packageLogoCont"><img src="./home-images/hiking-logo.jpg" alt="logo"></div>
         <div class="Sh-packageNames"><a href="">Hiking Package</a></div>
       </div>
       <div>
-        <div class="Sh-packageLogoCont"><img src="Europe-logo.jpg" alt="logo"></div>
+        <div class="Sh-packageLogoCont"><img src="./home-images/Europe-logo.jpg" alt="logo"></div>
         <div class="Sh-packageNames"><a href="">Europa Destination</a></div>
       </div>
       <div>
-        <div class="Sh-packageLogoCont"><img src="beach-logo.webp" alt="logo"></div>
+        <div class="Sh-packageLogoCont"><img src="./home-images/beach-logo.webp" alt="logo"></div>
         <div class="Sh-packageNames"><a href="">Beach Package</a></div>
       </div>
     </div>
@@ -115,19 +115,19 @@
       </article>
       <div>
         <div>
-          <div><img src="partnerCompanyLogo1.jpg" width="50px" alt="logo"></div>
+          <div><img src="./home-images/partnerCompanyLogo1.jpg" width="50px" alt="logo"></div>
           <h5>BEBEGIAN</h5>
         </div>
         <div>
-          <div><img src="partnerCompanyLogo2.jpg" width="50px" alt="logo"></div>
+          <div><img src="./home-images/partnerCompanyLogo2.jpg" width="50px" alt="logo"></div>
           <h5>LELUNGO</h5>
         </div>
         <div>
-          <div><img src="partnerCompanyLogo3.jpg" width="50px" alt="logo"></div>
+          <div><img src="./home-images/partnerCompanyLogo3.jpg" width="50px" alt="logo"></div>
           <h5>PIPIKNIK</h5>
         </div>
         <div>
-          <div><img src="partnerCompanyLogo4.jpg" width="50px" style="border-radius: 50%;" alt="logo"></div>
+          <div><img src="./home-images/partnerCompanyLogo4.jpg" width="50px" style="border-radius: 50%;" alt="logo"></div>
           <h5>TITINDAK</h5>
         </div>
       </div>
@@ -145,7 +145,7 @@
         <button>See more</button>
       </div>
       <div>
-        <img src="imgForAboutSec.webp" alt="placeImg">
+        <img src="./home-images/imgForAboutSec.webp" alt="placeImg">
       </div>
     </section>
   </div>
@@ -213,12 +213,12 @@
   <div id="Sh-alignCont12">
     <div id="Sh-testimonialCont">
       <div>
-        <img src="testimonial-img.webp" alt="">
+        <img src="./home-images/testimonial-img.webp" alt="">
       </div>
       <div>
         <h3>TESTIMONIALS</h3>
         <div id="Sh-profileNameCont">
-          <img src="testimonial-person-profile-icon.webp" alt="profileLogo" width="30px">
+          <img src="./home-images/testimonial-person-profile-icon.webp" alt="profileLogo" width="30px">
           <h5>Rohit Devnath</h5>
         </div>
         <p style="text-align:right;">Travel Tribe is everyone's dream travel agency, affordable prizes and customizable
