final about page

--- a/About.html
+++ b/About.html
@@ -32,13 +32,13 @@
         </div>
         <div id="NpageLinksCont">
           <a href="./Home.html">HOME</a>
-          <a href="#">ABOUT US</a>
+          <a href="./About.html">ABOUT US</a>
           <a href="#">CONTACT US</a>
           <a href="#">BLOG</a>
         </div>
         <div id="NnavBtnCont">
-          <button id="NlogInBtn">Log in</button>
-          <button id="NsignInBtn">Sign up</button>
+          <button id="Sh-logInBtn">Log in</button>
+          <button id="Sh-signInBtn">Sign up</button>
         </div>
       </nav>
     </div>
@@ -46,7 +46,7 @@
       <h1>About Travel Tribe</h1>
       <h3>Get to know Travel tribe closer and make it happen!</h3>
       <div id="NinputCont">
-        <div class="NSh-labelCont">
+        <div class="NlabelCont">
           <label for="placeNameInp" class="Nlabels">Location</label>
           <input
             type="text"
@@ -55,7 +55,7 @@
             placeholder="Where to go"
           />
         </div>
-        <div class="NSh-labelCont">
+        <div class="NlabelCont">
           <label for="checkInDate" class="Nlabels">Check in</label>
           <input
             type="date"
@@ -64,7 +64,7 @@
             placeholder="Choose a date"
           />
         </div>
-        <div class="NSh-labelCont">
+        <div class="NlabelCont">
           <label for="visitor" class="Nlabels">Visitor</label>
           <input
             type="text"
@@ -73,7 +73,7 @@
             placeholder="Add guest"
           />
         </div>
-        <div class="Sh-btnCont">
+        <div class="NbtnCont">
           <button id="Sh-searchBtn">
             <span style="font-size: 70px" class="material-symbols-outlined"
               >search</span
@@ -87,13 +87,13 @@
       <div>
         <div>
           <div class="NpackageLogoCont">
-            <img src="kona-logo.webp" alt="logo" />
+            <img src="./home-images/kona-logo.webp" alt="logo" />
           </div>
           <div class="NpackageNames"><a href="">Kona Package</a></div>
         </div>
         <div>
           <div class="NpackageLogoCont">
-            <img src="historical-log.webp" alt="logo" />
+            <img src="./home-images/historical-log.webp" alt="logo" />
           </div>
           <div class="NpackageNames">
             <a href="">Historical Destination</a>
@@ -101,37 +101,37 @@
         </div>
         <div>
           <div class="NpackageLogoCont">
-            <img src="camping-logo.webp" alt="logo" />
+            <img src="./home-images/camping-logo.webp" alt="logo" />
           </div>
           <div class="NpackageNames"><a href="">Camping Package</a></div>
         </div>
         <div>
           <div class="NpackageLogoCont">
-            <img src="asia-logo.webp" alt="logo" />
+            <img src="./home-images/asia-logo.webp" alt="logo" />
           </div>
           <div class="NpackageNames"><a href="">Asia Destination</a></div>
         </div>
         <div>
           <div class="NpackageLogoCont">
-            <img src="desert-logo.webp" alt="logo" />
+            <img src="./home-images/desert-logo.webp" alt="logo" />
           </div>
           <div class="NpackageNames"><a href="">Desert Oasis Package</a></div>
         </div>
         <div>
           <div class="NpackageLogoCont">
-            <img src="hiking-logo.jpg" alt="logo" />
+            <img src="./home-images/hiking-logo.jpg" alt="logo" />
           </div>
           <div class="NpackageNames"><a href="">Hiking Package</a></div>
         </div>
         <div>
           <div class="NpackageLogoCont">
-            <img src="Europe-logo.jpg" alt="logo" />
+            <img src="./home-images/Europe-logo.jpg" alt="logo" />
           </div>
           <div class="NpackageNames"><a href="">Europa Destination</a></div>
         </div>
         <div>
           <div class="NpackageLogoCont">
-            <img src="beach-logo.webp" alt="logo" />
+            <img src="./home-images/beach-logo.webp" alt="logo" />
           </div>
           <div class="NpackageNames"><a href="">Beach Package</a></div>
         </div>
@@ -140,13 +140,13 @@
 
     <div id="NblankCont"></div>
 
-    <div class="NalignCont3">
-      <section id="NtransparentCont">
+    <div class="NcommonAlignCont">
+      <section class="NtransparentCont">
         <h1>TRAVEL PARTNER</h1>
       </section>
     </div>
-    <div id="NalignCont4">
-      <section id="NoverlapCont">
+    <div class="NcommoneAlignforOverlapCont">
+      <section class="NoverlapCont" id="Noverlap1stCont">
         <h2>OUR TRAVEL PARTNER</h2>
       </section>
     </div>
@@ -161,19 +161,44 @@
         </article>
         <div>
           <div>
-            <div><img src="" alt="logo" /></div>
+            <div>
+              <img
+                src="./home-images/partnerCompanyLogo1.jpg"
+                width="50px"
+                alt="logo"
+              />
+            </div>
             <h5>BEBEGIAN</h5>
           </div>
           <div>
-            <div><img src="" alt="logo" /></div>
+            <div>
+              <img
+                src="./home-images/partnerCompanyLogo2.jpg"
+                width="50px"
+                alt="logo"
+              />
+            </div>
             <h5>LELUNGO</h5>
           </div>
           <div>
-            <div><img src="" alt="logo" /></div>
+            <div>
+              <img
+                src="./home-images/partnerCompanyLogo3.jpg"
+                width="50px"
+                alt="logo"
+              />
+            </div>
             <h5>PIPIKNIK</h5>
           </div>
           <div>
-            <div><img src="" alt="logo" /></div>
+            <div>
+              <img
+                src="./home-images/partnerCompanyLogo4.jpg"
+                width="50px"
+                style="border-radius: 50%"
+                alt="logo"
+              />
+            </div>
             <h5>TITINDAK</h5>
           </div>
         </div>
