--- a/blog.html
+++ b/blog.html
@@ -33,7 +33,7 @@
                 <a href="./Home.html">HOME</a>
                 <a href="./About.html">ABOUT US</a>
                 <a href="#">CONTACT US</a>
-                <a href="#">BLOG</a>
+                <a href="./blog.html">BLOG</a>
             </div>
             <div id="Sh-navBtnCont">
                 <button id="Sh-logInBtn">Log in</button>
@@ -42,8 +42,8 @@
         </nav>
     </div>
     <section id="Sh-headingInpContainer">
-        <h1>Travel around the world</h1>
-        <h3>Enjoy our services for your trip anywhere and anytime</h3>
+        <h1>Destinations</h1>
+        <h3>Amazing Destinations in the word</h3>
         <div id="Sh-inputCont">
             <div class="Sh-labelCont">
                 <label for="placeNameInp" class="Sh-labels">Location</label>
@@ -105,12 +105,12 @@
 
     <div class="Sh-commonAlignCont">
         <section class="Sh-transparentCont">
-            <h1>TRAVEL PARTNER</h1>
+            <h1>DESTINATION BLOGS</h1>
         </section>
     </div>
     <div class="Sh-commoneAlignforOverlapCont">
         <section class="Sh-overlapCont" id="Sh-overlap1stCont">
-            <h2>OUR TRAVEL PARTNER</h2>
+            <h2>MBLAYANG</h2>
         </section>
     </div>
 
@@ -124,13 +124,26 @@
 
 
 
+    <div class="overlay" id="overlay"></div>
+
+    <div class="popup" id="popup">
+        <!-- Popup content goes here -->
+        <p id="poppara"></p>
+        <button onclick="closePopup()" id="close">Close</button>
+    </div>
+
+
     <!-- ///////////////////Data Wrapper Container/////////////////// -->
     <div id="Sh-alignCont9">
         <div id="data-Button-cont">
             <div id="Sh-data-main-container1">
 
             </div>
-            <div id="btnContainer"><button id="seeMoreCardBtn">See More</button></div>
+            <!-- <hr id="line"> -->
+            <div id="btnContainer">
+
+                <button id="seeMoreCardBtn">See More</button>
+            </div>
         </div>
     </div>
 
