--- a/payment.html
+++ b/payment.html
@@ -22,8 +22,8 @@
       <div id="Sh-pageLinksCont">
         <a href="./Home.html">HOME</a>
         <a href="./About.html">ABOUT US</a>
-        <a href="#">CONTACT US</a>
-        <a href="#">BLOG</a>
+        <a href="./blog.html">BLOG</a>
+        <a href="./contact.html">CONTACT US</a>
       </div>
       <div id="Sh-navBtnCont">
         <button id="Sh-logInBtn">Log in</button>
@@ -33,6 +33,10 @@
   </div>
 
   <!-- payment from -->
+
+  <div class="inputform">
+
+
   <form action="your_action_url" method="POST">
     <label for="date">Date:</label>
     <input type="text" id="date" name="date" placeholder="Enter date">
@@ -52,13 +56,17 @@
     <button type="submit">Book</button>
 </form>
 
+
+</div>
+
+
 <!-- Explore more packege -->
 <div id="packegeheading">
   <i class="fa fa-hand-o-down" style="font-size:24px"></i>
   <i class="fa fa-hand-o-down" style="font-size:24px"></i>
   <i class="fa fa-hand-o-down" style="font-size:24px"></i>
 
- <h1>Explore More packege</h1> 
+ <h1 class="exploremoreline">Explore More packege</h1> 
 
  <i class="fa fa-hand-o-down" style="font-size:24px"></i>
   <i class="fa fa-hand-o-down" style="font-size:24px"></i>
@@ -88,8 +96,8 @@
     <div class="Ncontent-Footer">
       <div class="Ncontent-footer-col1">
         <a href="Home.html" class="Nfooter-Bold">TRAVEL TRIBE</a>
-        <a href="" class="Nfooter-Grey">TEAM SERVICE</a>
-        <a href="#" class="Nfooter-Grey">CONTACT US</a>
+        <a href="#" class="Nfooter-Grey">TEAM SERVICE</a>
+        <a href="./contact.html" class="Nfooter-Grey">CONTACT US</a>
       </div>
       <div class="Ncontent-footer-col2">
         <p class="Nfooter-Bold">PAGE</p>
