--- a/login.html
+++ b/login.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="about.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300&family=Open+Sans:wght@500&family=Pixelify+Sans:wght@400;500&family=Poppins:wght@300;400&family=Roboto:ital,wght@0,300;0,400;1,300&family=Rubik&family=Rubik+Pixels&display=swap"
       rel="stylesheet"
@@ -14,13 +11,11 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+    <link rel="stylesheet" href="login.css" />
     <title>Document</title>
   </head>
   <body>
-    <!-- nishant - uppermost conatiner -->
-    <header>
-      <div id="NfadeCont"></div>
-    </header>
+    <!-- nishant-login-navbar -->
     <div id="NalignCont">
       <nav>
         <div id="NlogoCont">
@@ -33,8 +28,9 @@
         <div id="NpageLinksCont">
           <a href="./Home.html">HOME</a>
           <a href="./About.html">ABOUT US</a>
-          <a href="./blog.html">BLOG</a>
-          <a href="./contact.html">CONTACT US</a>
+
+          <a href="blog.html">BLOG</a>
+          <a href="contact.html">CONTACT US</a>
         </div>
         <div id="NnavBtnCont">
           <button onclick=" redirectToPage('login.html')" id="Sh-logInBtn">
@@ -46,233 +42,51 @@
         </div>
       </nav>
     </div>
-    <section id="NheadingInpContainer">
-      <h1>About Travel Tribe</h1>
-      <h3>Get to know Travel tribe closer and make it happen!</h3>
-      <div id="NinputCont">
-        <div class="NlabelCont">
-          <label for="placeNameInp" class="Nlabels">Location</label>
-          <input
-            type="text"
-            name="placeName"
-            id="NplaceNameInp"
-            placeholder="Where to go"
-          />
-        </div>
-        <div class="NlabelCont">
-          <label for="checkInDate" class="Nlabels">Check in</label>
-          <input
-            type="date"
-            name="checkInDate"
-            id="NcheckInDate"
-            placeholder="Choose a date"
-          />
-        </div>
-        <div class="NlabelCont">
-          <label for="visitor" class="Nlabels">Visitor</label>
-          <input
-            type="text"
-            name="placeName"
-            id="Nvisitor"
-            placeholder="Add guest"
-          />
-        </div>
-        <div class="NbtnCont">
-          <button id="Sh-searchBtn">
-            <span style="font-size: 70px" class="material-symbols-outlined"
-              >search</span
-            >
-          </button>
-        </div>
-      </div>
-    </section>
-
-    <section class="NalignContainer">
-      <div>
-        <div>
-          <div class="NpackageLogoCont">
-            <img src="./home-images/kona-logo.webp" alt="logo" />
-          </div>
-          <div class="NpackageNames"><a href="">Kona Package</a></div>
-        </div>
-        <div>
-          <div class="NpackageLogoCont">
-            <img src="./home-images/historical-log.webp" alt="logo" />
-          </div>
-          <div class="NpackageNames">
-            <a href="">Historical Destination</a>
-          </div>
-        </div>
-        <div>
-          <div class="NpackageLogoCont">
-            <img src="./home-images/camping-logo.webp" alt="logo" />
-          </div>
-          <div class="NpackageNames"><a href="">Camping Package</a></div>
-        </div>
-        <div>
-          <div class="NpackageLogoCont">
-            <img src="./home-images/asia-logo.webp" alt="logo" />
-          </div>
-          <div class="NpackageNames"><a href="">Asia Destination</a></div>
-        </div>
-        <div>
-          <div class="NpackageLogoCont">
-            <img src="./home-images/desert-logo.webp" alt="logo" />
-          </div>
-          <div class="NpackageNames"><a href="">Desert Oasis Package</a></div>
-        </div>
-        <div>
-          <div class="NpackageLogoCont">
-            <img src="./home-images/hiking-logo.jpg" alt="logo" />
-          </div>
-          <div class="NpackageNames"><a href="">Hiking Package</a></div>
-        </div>
-        <div>
-          <div class="NpackageLogoCont">
-            <img src="./home-images/Europe-logo.jpg" alt="logo" />
-          </div>
-          <div class="NpackageNames"><a href="">Europa Destination</a></div>
-        </div>
-        <div>
-          <div class="NpackageLogoCont">
-            <img src="./home-images/beach-logo.webp" alt="logo" />
-          </div>
-          <div class="NpackageNames"><a href="">Beach Package</a></div>
-        </div>
-      </div>
-    </section>
-
-    <div id="NblankCont"></div>
-
-    <div class="NcommonAlignCont">
-      <section class="NtransparentCont">
-        <h1>TRAVEL PARTNER</h1>
-      </section>
-    </div>
-    <div class="NcommoneAlignforOverlapCont">
-      <section class="NoverlapCont" id="Noverlap1stCont">
-        <h2>OUR TRAVEL PARTNER</h2>
-      </section>
-    </div>
-
-    <div class="NalignCont5">
-      <section id="NpartnerSection">
-        <article>
-          <p>
-            We collaborate with several other travel service provide to increase
-            your comfort when using our services
-          </p>
-        </article>
-        <div>
+    <!-- nishant-login-content -->
+    <div class="Nlogin-main-container">
+      <h1>Login</h1>
+      <div class="Nlogin-inner-container">
+        <form action="login.php" method="post">
           <div>
-            <div>
-              <img
-                src="./home-images/partnerCompanyLogo1.jpg"
-                width="50px"
-                alt="logo"
-              />
-            </div>
-            <h5>BEBEGIAN</h5>
+            <label for="Email" style="margin-left: 50px">Email : </label>
+            <input
+              type="email"
+              style="margin-left: 10px"
+              id="Nemail"
+              name="Email"
+              placeholder="email-id"
+              minlength="5"
+              maxlength="20"
+              required
+            />
           </div>
-          <div>
-            <div>
-              <img
-                src="./home-images/partnerCompanyLogo2.jpg"
-                width="50px"
-                alt="logo"
-              />
-            </div>
-            <h5>LELUNGO</h5>
-          </div>
-          <div>
-            <div>
-              <img
-                src="./home-images/partnerCompanyLogo3.jpg"
-                width="50px"
-                alt="logo"
-              />
-            </div>
-            <h5>PIPIKNIK</h5>
-          </div>
-          <div>
-            <div>
-              <img
-                src="./home-images/partnerCompanyLogo4.jpg"
-                width="50px"
-                style="border-radius: 50%"
-                alt="logo"
-              />
-            </div>
-            <h5>TITINDAK</h5>
-          </div>
-        </div>
-      </section>
-    </div>
+          <br />
 
-    <!-- nishant-mid-container-about-page -->
-    <div class="Nmid-container">
-      <div class="Nmid-container-content">
-        <div class="Nmid-container-div1">
-          <img src="./Aboutimages/midPArt1.webp" alt="" />
-        </div>
-        <div class="Nmid-container-div2">
-          <h4>OUR HISTORY</h4>
-          <p style="color: black; font-weight: 800">
-            TRAVEL TRIBE TRAVEL AGENCY
-          </p>
-          <p>
-            Travel Tribe agency was created in july,2023 consisting of five
-            founders,this aompany has grown very rapidly to become what it is
-            today. Travel Tribe serves various tourist destinations according to
-            what customers want.
-          </p>
-        </div>
-        <div class="Nmid-container-div3">
-          <h4>OUR SPECIALIZATION</h4>
-          <p style="color: black; font-weight: 800">
-            INDONESIA TRAVEL SERVICE FOR YOU
-          </p>
-          <p>
-            Trave Tribe is a travel agency that has been in services for 6
-            years. Our focus is to provide travel that can be reached by all our
-            customers at affordable orice
-          </p>
-        </div>
-        <div class="Nmid-container-div4">
-          <img src="./Aboutimages/beachtown.webp" alt="" />
-        </div>
-        <div class="Nmid-container-div5">
-          <img src="./Aboutimages/testimonial.jpg" alt="" />
-        </div>
-        <div class="Nmid-container-div6">
-          <h4>TESTIMONIALS</h4>
-          <p style="color: black; font-weight: 800">Akash Gupta</p>
-          <p>
-            Travel Tribe is everyone's dream travel agency, affordable prices
-            and customizable travel options are its main advantages. You should
-            try to travel with Travel Tribe.
-          </p>
-        </div>
+          <div>
+            <label for="password" style="margin-left: 10px">Password : </label>
+            <input
+              type="password"
+              style="margin-left: 10px"
+              id="Npassword"
+              name="password"
+              placeholder="password"
+              minlength="8"
+              maxlength="20"
+              required
+            />
+          </div>
+          <br />
+          <div><button id="Nlogin-id" type="submit">Login</button></div>
+        </form>
       </div>
     </div>
-    <!--nishant- after mid -->
-
-    <div class="Nafter-mid-container">
-      <div class="Njoin-membership">
-        <p>We served +20,000 travellers in 2022</p>
-        <div class="Nmidcontainh3">
-          <h3>Join membership and connect to every member</h3>
-        </div>
-        <button class="Nafter-mid-button">Join Member</button>
-      </div>
-    </div>
-    <!-- nishant-Footer -->
+    <!--nishant-login-footer -->
     <div class="Nabout-Footer">
       <div class="Ncontent-Footer">
         <div class="Ncontent-footer-col1">
           <a href="Home.html" class="Nfooter-Bold">TRAVEL TRIBE</a>
           <a href="" class="Nfooter-Grey">TEAM SERVICE</a>
-          <a href="contact.html" class="Nfooter-Grey">CONTACT US</a>
+          <a href="./contact.html" class="Nfooter-Grey">CONTACT US</a>
         </div>
         <div class="Ncontent-footer-col2">
           <p class="Nfooter-Bold">PAGE</p>
@@ -350,7 +164,6 @@
         <p class="Nfooter-Grey2">TRAVEL TRIBE ALL RIGHTS RESERVED, 2023</p>
       </div>
     </div>
-    <script src="About.js"></script>
     <script src="login.js"></script>
   </body>
 </html>
